Implemented initial PATCH method for updating user settings
